# k-download

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/kodansha/: library.rs  mod.rs  page.rs  series.rs  user.rs  volume.rs
src/tui/: app.rs  login.rs  mod.rs  tree.rs  user.rs
src/tui/user/: download.rs  library.rs  mod.rs
src/utils/: dedup.rs  mod.rs
