[package]
name = "k_download"
version = "1.0.1"
edition = "2021"

[[bin]]
name = "k-download"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11.17", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.28"
structopt = "0.3.26"
tokio-util = { version = "0.7.8", features = ["full"] }
tokio-fs = "0.1.7"
futures-util = "0.3.28"
epub-builder = {git = "https://github.com/lise-henry/epub-builder.git", branch = "master"}
anyhow = "1.0.71"
config = "0.13.3"
dirs = "5.0.1"
ratatui = { version = "0.20.0", features = ["serde"] }
crossterm = "0.26.1"
toml = "0.7.3"
html-escape = "0.2.13"
